# ancore

./: .env.docker.example  .env.example  .prettierignore  CONTRIBUTING.md  PROMETHEUS_METRICS_IMPLEMENTATION.md  README.md  SECURITY.md  docker-compose.dev.yml  fiat-formatter.test.ts  fiat-formatter.ts  package.json  pnpm-lock.yaml  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  flaky-test-quarantine.json
.github/ISSUE_TEMPLATE/: flaky_test.md
.github/workflows/: ci.yml  release-gate.yml  rollback-drill.yml  validate-observability.yml
__tests__/: state.test.ts
apps/extension-wallet/: .bundlewatch.json  package.json  stats.html  vitest.config.ts
apps/mobile-wallet/: eslint.config.cjs  jest.config.cjs  package.json  tsconfig.test.json  vitest.config.ts
apps/web-dashboard/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
contracts/: README.md
contracts/account/: Cargo.toml  README.md
contracts/invoice/: Cargo.toml  README.md
contracts/invoice/src/: lib.rs
contracts/scripts/: dry-run.sh  verify-deploy-docs.sh
docs/: PRIVACY_POLICY.md  TERMS_OF_SERVICE.md  accessibility.md  ci-failure-triage.md  contract-methods.md  performance-budgets.md  security-audit-prep.md  telemetry.md
docs/development/: local-services.md
docs/example/: session-key-lifecycle.md
docs/security/: CRYPTOGRAPHY.md  (+2 more)
scripts/: curl-smoke-indexer.sh  verify-dev-scripts.sh  verify-theme-tokens.ts
services/: Cargo.toml  prometheus.yml
state/: network.slice.ts  persist.ts  session.slice.ts  store.ts  wallet.slice.ts
types/: network.ts
(+179 files in other folders)
